--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CornerRadiusStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CornerRadiusStyle.axaml
@@ -1,5 +1,5 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <CornerRadius x:Key="Small">2,2,2,2</CornerRadius>
-    <CornerRadius x:Key="Medium">4,4,4,4</CornerRadius>
-    <CornerRadius x:Key="Large">6,6,6,6</CornerRadius>
+    <CornerRadius x:Key="LayCornerRadiusSmall">2</CornerRadius>
+    <CornerRadius x:Key="LayCornerRadiusMedium">4</CornerRadius>
+    <CornerRadius x:Key="LayCornerRadiusLarge">6</CornerRadius>
 </ResourceDictionary>
