--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -29,4 +29,5 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ToggleButtonStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ExpanderStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/NoticeBarStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/SkeletonStyle.axaml" />
 </Styles>
