--- a/src/LayuiAvaloniaPack/Layui.Main/Views/SkeletonPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/SkeletonPage.axaml
@@ -3,6 +3,9 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+    xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
+    xmlns:ic="using:Avalonia.Xaml.Interactions.Custom"
     xmlns:lay="using:LayUI.Avalonia.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
@@ -10,8 +13,12 @@
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
-    <ScrollViewer>
-        <StackPanel Margin="10">
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <StackPanel>
             <CheckBox x:Name="Switch" IsChecked="True" />
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -73,13 +80,15 @@
                     </lay:LaySkeleton>
                 </UniformGrid>
             </Grid>
-            <lay:LayButton
-                Margin="0,5"
-                Command="{Binding TestCommand}"
-                Content="刷新"
-                Type="Default" />
-            <ListBox Height="500" ItemsSource="{Binding Items}">
-                <ListBox.ItemTemplate>
+        </StackPanel>
+        <lay:LayGroupBox Grid.Row="1" Header="滚动加载数据">
+            <lay:LayFlowItemsControl ItemsSource="{Binding Items}">
+                <i:Interaction.Behaviors>
+                    <ia:EventTriggerBehavior EventName="Append">
+                        <ia:InvokeCommandAction Command="{Binding TestCommand}" />
+                    </ia:EventTriggerBehavior>
+                </i:Interaction.Behaviors>
+                <lay:LayFlowItemsControl.ItemTemplate>
                     <DataTemplate>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -89,7 +98,7 @@
                             <lay:LaySkeleton
                                 Width="100"
                                 Margin="0,5,10,5"
-                                IsActive="{Binding ., Mode=OneWay}"
+                                IsActive="{Binding IsActive, Mode=OneWay}"
                                 Type="Image">
                                 <Image Source="/Assets/avalonia-logo.ico" />
                             </lay:LaySkeleton>
@@ -100,7 +109,7 @@
                                 <lay:LaySkeleton
                                     Margin="0,5,250,5"
                                     VerticalAlignment="Center"
-                                    IsActive="{Binding ., Mode=OneWay}">
+                                    IsActive="{Binding IsActive, Mode=OneWay}">
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock
                                             Margin="10,0"
@@ -108,13 +117,13 @@
                                             FontFamily="{DynamicResource Icon}"
                                             Foreground="{DynamicResource Gradient}"
                                             Text="&#xec26;" />
-                                        <TextBlock VerticalAlignment="Center" Text="看山不是山，看水不是水，看山还是山，看水还是水" />
+                                        <TextBlock VerticalAlignment="Center" Text="{Binding Title}" />
                                     </StackPanel>
                                 </lay:LaySkeleton>
                                 <lay:LaySkeleton
                                     Margin="0,5,100,5"
                                     VerticalAlignment="Center"
-                                    IsActive="{Binding ., Mode=OneWay}">
+                                    IsActive="{Binding IsActive, Mode=OneWay}">
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock
                                             Margin="10,0"
@@ -122,13 +131,13 @@
                                             FontFamily="{DynamicResource Icon}"
                                             Foreground="{DynamicResource Gradient}"
                                             Text="&#xec26;" />
-                                        <TextBlock VerticalAlignment="Center" Text="看山不是山，看水不是水，看山还是山，看水还是水" />
+                                        <TextBlock VerticalAlignment="Center" Text="{Binding Title}" />
                                     </StackPanel>
                                 </lay:LaySkeleton>
                                 <lay:LaySkeleton
                                     Margin="0,5"
                                     VerticalAlignment="Center"
-                                    IsActive="{Binding ., Mode=OneWay}">
+                                    IsActive="{Binding IsActive, Mode=OneWay}">
                                     <StackPanel Orientation="Horizontal">
                                         <TextBlock
                                             Margin="10,0"
@@ -136,14 +145,14 @@
                                             FontFamily="{DynamicResource Icon}"
                                             Foreground="{DynamicResource Gradient}"
                                             Text="&#xec26;" />
-                                        <TextBlock VerticalAlignment="Center" Text="看山不是山，看水不是水，看山还是山，看水还是水" />
+                                        <TextBlock VerticalAlignment="Center" Text="{Binding Title}" />
                                     </StackPanel>
                                 </lay:LaySkeleton>
                             </UniformGrid>
                         </Grid>
                     </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-        </StackPanel>
-    </ScrollViewer>
+                </lay:LayFlowItemsControl.ItemTemplate>
+            </lay:LayFlowItemsControl>
+        </lay:LayGroupBox>
+    </Grid>
 </UserControl>
