--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -30,4 +30,5 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ExpanderStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/NoticeBarStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/SkeletonStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/FlowItemsControlStyle.axaml" />
 </Styles>
