新增图片控件
该功能 增强图片地址加载功能，支持网咯图片

--- a/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
@@ -192,7 +192,8 @@
                                                 VerticalAlignment="Center"
                                                 FontSize="20"
                                                 Foreground="White"
-                                                Text="{Binding Title}" />
+                                                Text="{Binding Title}"
+                                                TextTrimming="{x:Static TextTrimming.CharacterEllipsis}" />
                                             <Border
                                                 Grid.Column="2"
                                                 Margin="5,0"
