--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/LegendStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/LegendStyle.axaml
@@ -4,16 +4,34 @@
     xmlns:lay="clr-namespace:LayUI.Avalonia.Controls;assembly=LayUI.Avalonia">
     <Design.PreviewWith>
         <Border Width="200" Padding="20">
-            <lay:LayLegend Content="标题水平线" />
+            <StackPanel>
+                <lay:LayLegend>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="5,0" Text="我是标题" />
+                    </StackPanel>
+                </lay:LayLegend>
+                <lay:LayLegend Type="Center">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="5,0" Text="我是标题" />
+                    </StackPanel>
+                </lay:LayLegend>
+                <lay:LayLegend Type="Right">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="5,0" Text="我是标题" />
+                    </StackPanel>
+                </lay:LayLegend>
+            </StackPanel>
         </Border>
     </Design.PreviewWith>
     <Style Selector="lay|LayLegend">
         <Setter Property="LineColor" Value="{DynamicResource SilverGray}" />
         <Setter Property="LineThickness" Value="1" />
+    </Style>
+    <Style Selector="lay|LayLegend[Type=Left]">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Grid ColumnDefinitions="auto,auto,*">
+                    <Grid x:Name="PART_Grid" ColumnDefinitions="auto,auto,*">
                         <Border
                             Width="{TemplateBinding HorizontalOffset}"
                             Height="{TemplateBinding LineThickness}"
@@ -30,6 +48,65 @@
                             UseLayoutRounding="True" />
                         <Border
                             Grid.Column="2"
+                            Height="{TemplateBinding LineThickness}"
+                            Background="{TemplateBinding LineColor}"
+                            ClipToBounds="True"
+                            CornerRadius="{TemplateBinding CornerRadius}" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style Selector="lay|LayLegend[Type=Center]">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Grid x:Name="PART_Grid" ColumnDefinitions="*,auto,*">
+                        <Border
+                            Height="{TemplateBinding LineThickness}"
+                            Background="{TemplateBinding LineColor}"
+                            ClipToBounds="True"
+                            CornerRadius="{TemplateBinding CornerRadius}" />
+                        <ContentPresenter
+                            Name="PART_ContentPresenter"
+                            Grid.Column="1"
+                            Padding="{TemplateBinding Padding}"
+                            VerticalContentAlignment="Center"
+                            Content="{TemplateBinding Content}"
+                            ContentTemplate="{TemplateBinding ContentTemplate}"
+                            UseLayoutRounding="True" />
+                        <Border
+                            Grid.Column="2"
+                            Height="{TemplateBinding LineThickness}"
+                            Background="{TemplateBinding LineColor}"
+                            ClipToBounds="True"
+                            CornerRadius="{TemplateBinding CornerRadius}" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style Selector="lay|LayLegend[Type=Right]">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Grid x:Name="PART_Grid" ColumnDefinitions="*,auto,auto">
+                        <Border
+                            Height="{TemplateBinding LineThickness}"
+                            Background="{TemplateBinding LineColor}"
+                            ClipToBounds="True"
+                            CornerRadius="{TemplateBinding CornerRadius}" />
+                        <ContentPresenter
+                            Name="PART_ContentPresenter"
+                            Grid.Column="1"
+                            Padding="{TemplateBinding Padding}"
+                            VerticalContentAlignment="Center"
+                            Content="{TemplateBinding Content}"
+                            ContentTemplate="{TemplateBinding ContentTemplate}"
+                            UseLayoutRounding="True" />
+                        <Border
+                            Grid.Column="2"
+                            Width="{TemplateBinding HorizontalOffset}"
                             Height="{TemplateBinding LineThickness}"
                             Background="{TemplateBinding LineColor}"
                             ClipToBounds="True"
