完成键盘基础点击功能
完成键盘布局以及点击效果

--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -38,4 +38,5 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DateRangePickerStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DateTimePickerStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DateTimeRangePickerStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/KeyboardStyle.axaml" />
 </Styles>
