--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -39,4 +39,5 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DateTimePickerStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DateTimeRangePickerStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/KeyboardStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DrawerStyle.axaml" />
 </Styles>
