调整卡片样式

--- a/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/HomePage.axaml
@@ -218,10 +218,7 @@
                 </Grid>
             </Grid>
         </lay:LayLoading>
-        <lay:LayDrawer
-            Grid.RowSpan="2"
-            IsOpen="{Binding #More.IsChecked, Mode=TwoWay}"
-            ZIndex="10">
+        <lay:LayDrawer Grid.RowSpan="2" IsOpen="{Binding #More.IsChecked, Mode=TwoWay}">
             <StackPanel Width="300" Background="White">
                 <Border BorderBrush="{DynamicResource Gray}" BorderThickness="0,0,0,1">
                     <TextBlock
