修复卡片阴影效果

--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CardStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/CardStyle.axaml
@@ -8,7 +8,8 @@
                 <lay:LayCard
                     Width="50"
                     Height="50"
-                    Margin="5" />
+                    Margin="5"
+                    ShadowColor="Red" />
                 <lay:LayCard
                     Width="50"
                     Height="50"
