--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -40,4 +40,6 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DateTimeRangePickerStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/KeyboardStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DrawerStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ListBoxStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ListBoxItemStyle.axaml" />
 </Styles>
