--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Themes/Default.axaml
@@ -42,4 +42,6 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/DrawerStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ListBoxStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ListBoxItemStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TimelineStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TimelineItemStyle.axaml" />
 </Styles>
